# renju_text_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/: ren_viewer.cc
